--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@sd-samples/react-lib",
   "version": "0.1.0",
-  "description": "",
+  "description": "Sample react library",
   "files": [
     "dist"
   ],
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf dist && rollup -c",
+    "build": "rollup -c",
     "start": "start-storybook -p 3000",
     "build-storybook": "build-storybook",
     "prepare": "node ./prepare.js",
@@ -22,22 +22,22 @@
       "./react/"
     ],
     "./core": {
-      "default": "./dist/core/index.esm.js",
       "import": "./dist/core/index.esm.js",
       "require": "./dist/core/index.cjs.js",
-      "types": "./dist/core/index.d.ts"
+      "types": "./dist/core/index.d.ts",
+      "default": "./dist/core/index.esm.js"
     },
     "./legacy": {
-      "default": "./dist/legacy/index.esm.js",
       "import": "./dist/legacy/index.esm.js",
       "require": "./dist/legacy/index.cjs.js",
-      "types": "./dist/legacy/index.d.ts"
+      "types": "./dist/legacy/index.d.ts",
+      "default": "./dist/legacy/index.esm.js"
     },
     "./react": {
-      "default": "./dist/react/index.esm.js",
       "import": "./dist/react/index.esm.js",
       "require": "./dist/react/index.cjs.js",
-      "types": "./dist/react/index.d.ts"
+      "types": "./dist/react/index.d.ts",
+      "default": "./dist/react/index.esm.js"
     }
   },
   "repository": {
